# haste-lang

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  PROGRESS.html  PROGRESS.org  README.md  README.org  examples.org  fix-json.js  flake.nix  grammar.bnf  jsonify.clj  main.c  main.cpp  main.haste  main.hir  progress.org  run.py  shell.nix  todo.org
config/: freebsd.mk  linux.mk  windows.mk
design-notes/: dot_operator_design.org
examples/: conditions.haste  fibonacci.haste  functions.haste  hello.haste
include/: analysis.h  analyzer.h  arena.h  arena.hpp  ast.base.h  ast.h  ast.hpp  cli_tools.h  codegen.h  common.h  common.hpp  config.h  converters.h  cwalk.h  error.h  hir.h  lexer.h  lexer.hpp  my_allocator.h  my_arena_allocator.h  my_array.h  my_assert.h  my_c_allocator.h  my_chunked_array.h  my_common.h  my_hashtable.h  my_managed_array.h  my_managed_chunked_array.h  my_math.h  my_optional.h  my_stream.h  my_string.h  my_string_view.h  my_temporary_allocator.h  my_termcolor.h  my_timing.h  parser.h  parser.hpp  scanner.h  span.h  (+6 more)
include/core/: cli_tools.h  cmylib.h  my_array.h  my_commons.h  my_linked_list.h  my_printer.h  my_string.h  my_thin_array.h
include/mylib/: allocator.hpp  dynamic-array.hpp  linked-list.hpp  memory.hpp  option.hpp  result.hpp  slice.hpp  string.hpp  traits.hpp  utf8.hpp
macros/: Cargo.toml
macros/src/: lib.rs
notes/: README.org  lex-on-demand.org
source/: analysis.c  ast.c  codegen.c  cwalk.c  error.c  haste.h  hoisting.c  intern.c  location.c  main.c  options.c  parse.c  scanner.c  source.c  span.c  token.c  token_stream.c  type.c  unicode.c  value.c
src/: AST.zig  Compiler.zig  Context.zig  DataStructure.zig  Symbol.zig  Token.zig  TranslationUnit.zig  Type.zig  analysis.c  analysis.rs  analyzer.c  arena.cpp  ast.c  ast.cpp  ast.rs  cli_tools.c  cmylib.c  codegen.c  common.c  config.c  converters.c  file_source_pool.rs  hir.c  hir.rs  hoisting.rs  lexer.c  lexer.cpp  main.rs  main.zig  my_math.c  my_string_view.c  parser.c  parser.cpp  parser.rs  reporter.rs  scanner.c  span.c  symbol.rs  test-mod.cpp  tir.c  (+7 more)
src/AST/: Expr.zig  Pattern.zig  Stmt.zig  Type.zig
src/DataStructure/: Stack.zig
src/FrontEnd/: Analyser.zig  Parser.zig  Scanner.zig
src/mylib/: allocator.cpp  string.cpp
src/symbol/: mod.rs  symbol.rs  type.rs
std/: prelude.haste
test/: run_tests.py  run_tests.sh
test/errors/: auto_cast_int_to_string.err.expected  auto_cast_int_to_string.haste  auto_cast_struct_mismatch.err.expected  auto_cast_struct_mismatch.haste  auto_field_no_default.err.expected  auto_field_no_default.haste  cannot_cast_string_int.err.expected  cannot_cast_string_int.haste  distinct_add_mismatch.err.expected  distinct_add_mismatch.haste  distinct_base_mismatch.err.expected  distinct_base_mismatch.haste  distinct_mismatch.err.expected  (+64 more)
(+159 files in other folders)
