[package]
name = "haste-lang"
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
logos = { version = "0.15.1" }
bumpalo = { version = "3.18", features = ["collections", "boxed"] }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3"
chumsky = "0.11.1"
qbe = "2.5.1"
macros = { path = "./macros" }
